--- a/components/index.html
+++ b/components/index.html
@@ -1,71 +1,50 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><title> Components </title>
-  <!-- <script type="text/javascript" src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <script type="text/javascript" src="bower_components/document-register-element/build/document-register-element.js"></script> -->
   <script type="text/javascript" src="component.js"></script>
-
-  <script src="my-element.js"></script>
-
   <link rel="stylesheet" href="main.css">
   <script type="text/javascript" src="data.js"></script>
-
   <!-- COMPONENTS -->
-  <link rel="import" href="components/self-built.html">
   <link rel="import" href="components/navbar.html">
   <link rel="import" href="components/landing.html">
   <link rel="import" href="components/id-card.html">
 </head>
 <body>
-  <!-- <my-element>
-    some content
-  </my-element> -->
-  <self-built-tag serve="data.arr[0]"></self-built-tag>
-  <navbar-tag serve="data.arr[0]"></navbar-tag>
-  <page status='active'>
-    <navbar-tag serve="data.arr[1]"></navbar-tag>
+
+  <page page="home" status="active">
+    <navbar-tag serve="data.arr[0]"></navbar-tag>
+    <navPage page="landing" status="active">
+      <landing-tag serve="data"></landing-tag> <br>
+    </navPage>
+    <navPage page="page2" status="inactive">
+      <!-- page2 goes here... -->
+    </navPage>
+    <navPage page="data" status="inactive">
+      <!-- data goes here... -->
+    </navPage>
   </page>
-  <landing-tag serve="data"></landing-tag> <br>
+
+  <page page="login" status="inactive">
+    <!-- login page goes here -->
+  </page>
+
 </body>
 
-<!-- <script type="text/javascript">
-var polyFillIncluded = false
-
-;(()=>{
-  if ('registerElement' in document
-      && 'import' in document.createElement('link')
-      && 'content' in document.createElement('template')) {
-
-    console.log('all good!!!')
-  } else {
-    polyFillIncluded = true
-    console.log('not good!!!')
-    var e = document.createElement('script');
-    e.src = 'bower_components/webcomponentsjs/webcomponents-lite.js';
-    document.body.appendChild(e);
-    var e2 = document.createElement('script');
-    e2.src = 'bower_components/document-register-element/build/document-register-element.js';
-    document.body.appendChild(e2);
-  }
-})()
-</script> -->
 </html>
 
 <!-- / / / / / / / / / / / / / / /    Notes    / / / / / / / / / / / / / / / / /
 
 *** Next ***
 - make page2.js
+- get gh pages working for loneJS
 - put cards in page two
 - create active attribute and set to landing.
 - endpoints
 - multi server="data.a data.b[0]"
-- ... really sort of a big picture moment from here...
+- visit HELPFUL LINK5: I think there needs to be some major refactoring with how we build using a separate class so we can use ONLY the webcomonents poly
+
 PAGE2
 - update website name (easy)
 - removed landing page edit (easy)
--
-IDCARD
--
-IDCARD (Imput)
--
+
 Login Page
 - complete new page (background and all)
 - included lifeless LOGIN username / Password / create account button
@@ -76,7 +55,6 @@ Login Page
 - add handle multiple serve='data.x data.another'
 - how do we handle differnet page swaps.
 - Clean -> vars  lets  const
-- Get it working on ipad/phone
 - https://robbobfrh84.github.io/lab/Independency/components/index.html
 
 -->
@@ -91,5 +69,7 @@ Login Page
 - ALSO, you may need to >>> sudo kill -9 PID    (If port has conflict (>>> top    (to find out PID))
 - HELPFUL LINK: *** https://www.html5rocks.com/en/tutorials/webcomponents/imports/
 - HELPFUL LINK2: https://www.html5rocks.com/en/tutorials/webcomponents/customelements/
-- HELPFUL LINK2:https://www.webcomponents.org/polyfills
+- HELPFUL LINK3: https://www.webcomponents.org/polyfills
+- HELPFUL LINK4: https://github.com/WebReflection/document-register-element
+- HELPFUL LINK5: https://developers.google.com/web/fundamentals/getting-started/primers/customelements
 -->
