--- a/main.css
+++ b/main.css
@@ -12,12 +12,7 @@ body {
   background-color: green;
 }
 
-
-
 /*SHOULD BE HANDLED IN JS SOMEWHERE!*/
-.active {
-  display: inline;
-}
 .inactive {
-  visibility: hidden;
+  display: none;
 }
