--- a/components/navbar.html
+++ b/components/navbar.html
@@ -25,12 +25,16 @@
 <content>
 <table style='width: 100%;'>
   <tr>
-    <th id='title' class="title gray1"> HTML components Demo </th>
+    <th id='title' class="title gray1"
+      onclick="pageChange('navpage', 'landing')"> HTML components Demo </th>
     <th>
       <div class="nav">
-        <span id='page2Button' class="nav-button gray1"> Page 2 </span> &nbsp; :: &nbsp;
-        <span id='dataButton' class="nav-button gray1"> Data </span> &nbsp; :: &nbsp;
-        <span id='loginButton' class="nav-button gray1"> Login </span>
+        <span id='page2Button' class="nav-button gray1"
+          onclick="pageChange('navpage', 'page2')"> Page 2 </span> &nbsp; :: &nbsp;
+        <span id='dataButton' class="nav-button gray1"
+          onclick="pageChange('navPage', 'data')"> Data </span> &nbsp; :: &nbsp;
+        <span id='loginButton' class="nav-button gray1"
+          onclick="pageChange('page', 'login')"> Login </span>
       </div>
     </th>
   </tr>
