--- a/components/id-card.html
+++ b/components/id-card.html
@@ -53,11 +53,11 @@
 (( c = new Component([ 'id-card-tag', '#id-card' ]) )=>{
 
   c.onLoad = ()=>{
-    c.root.getElementById('title').innerHTML = c.data.title
-    c.root.getElementById('first').value = c.data.name
-    c.root.getElementById('last').value = c.data.last
-    c.root.getElementById('age').value = c.data.age
-    c.root.getElementById('height').value = c.data.height
+    c.I('title').innerHTML = c.data.title
+    c.I('first').value = c.data.name
+    c.I('last').value = c.data.last
+    c.I('age').value = c.data.age
+    c.I('height').value = c.data.height
   }
 
   c.newElm()
