--- a/components/landing.html
+++ b/components/landing.html
@@ -6,6 +6,7 @@
     margin-top: 50px;
     text-align: center;
     color: rgba(0,0,0,0.6);
+    margin-top: 0px;
   }
   #title {
     font-size: 50px;
