--- a/components/id-card.html
+++ b/components/id-card.html
@@ -21,6 +21,9 @@
   th {
     font-size: 16px;
   }
+  input {
+    width: 90%;
+  }
 </style>
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
