--- a/components/navbar.html
+++ b/components/navbar.html
@@ -29,7 +29,6 @@
   display: inline-block;
   font-size: 14px;
 }
-
 </style>
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
@@ -87,7 +86,7 @@ component.getElementById('endText').innerHTML =
   })
 
   c.addEvent('click', 'login', ()=>{
-    data.important2.name = "Nav Data Clicked ("+c.data+")"
+    data.important2.name = "Nav Login("+c.data+") Clicked"
     data.user = 'LodgeSkins'
     data.id = 'fdg856csd3'
   }, true)
