--- a/components/navbar.html
+++ b/components/navbar.html
@@ -35,7 +35,7 @@
 <table style='width: 100%;'>
   <tr>
     <th id='title' class="title gray1"
-      onclick="pageSet('navpage', 'landing')"> HTML components Demo
+      onclick="pageSet('navpage', 'home')"> HTML components Demo
     </th>
     <th>
       <div class="nav">
