looks like the routs are working with the back button as well...

--- a/components/landing.html
+++ b/components/landing.html
@@ -35,11 +35,11 @@
     <div id='title'> --- Static Title </Div>
     <div>
       <button id="page2" style="border-color: rgba(100,0,0,0.3);"
-        onclick="pageSet('navpage', 'page2')"> Page 2 </button>
+        onclick="pageSet('home/page2')"> Page 2 </button>
       <button id="data" style="border-color: rgba(0,100,0,0.3);"
-        onclick="pageSet('navPage', 'data')"> Data </button>
+        onclick="pageSet('home/data')"> Data </button>
       <button id="login" style="border-color: rgba(0,0,100,0.3);"
-        onclick="pageSet('page', 'login')">Login</button>
+        onclick="pageSet('home/login')">Login</button>
     </div>
     <span> User: </span>
     <input id="user" placeholder="Not Set...">
