pages are pluged into updated status, needs to be looked at closer though...
- figure out funky 2x navbar.html issue, … like is there an issue?

--- a/components/id-card.html
+++ b/components/id-card.html
@@ -55,7 +55,7 @@
 
 (( c = new Component([ 'id-card-tag', '#id-card' ]) )=>{
 
-  c.onLoad = ()=>{
+  c.onAttributeSetOrChange = ()=>{
     c.I('title').innerHTML = c.data.title
     c.I('first').value = c.data.name
     c.I('last').value = c.data.last
