--- a/components/navbar.html
+++ b/components/navbar.html
@@ -50,8 +50,7 @@
   </tr>
 </table>
 <hr style="margin-top: 0px;">
-<div id="endText">
-</div>
+<div id="endText"></div>
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
@@ -66,15 +65,19 @@ component.getElementById('endText').innerHTML =
 
   c.clicked = 'landing'
 
-  c.onLoad = ()=>{
-    console.log('c.pageDirectory: ', c.pageDirectory)
-    const dir = c.pageDirectory.split('/')
-    for (page of dir) {
-      if (c.I(page)) pageSwap(page)
+  c.onAttributeSetOrChange = (attr)=>{
+    if (attr === 'directory') {
+      console.log('navBar onload')
+      const dir = c.directory ? c.directory.split('/') : []
+      for (page of dir) {
+        if (c.I(page)) {
+          c.pageSwap(page)
+        }
+      }
     }
   }
 
-  pageSwap = (button, remove)=>{ // this is NOT global, part of c, just declared here (c.addEvent) is decalred on instantiation in components.js
+  c.pageSwap = (button, remove)=>{ 
     c.I(c.clicked).classList.remove('clicked')
     if (!remove) c.I(button ? button : 'page2').classList.add('clicked')
     c.clicked = button ? button : 'page2'
@@ -82,12 +85,12 @@ component.getElementById('endText').innerHTML =
 
   c.addEvent('click', 'landing', ()=>{
     c.I('landing').innerHTML = 'HTML components Demo'
-    pageSwap('landing', true)
+    c.pageSwap('landing', true)
   })
 
   c.addEvent('click', 'page2', infoClick = (button, more)=>{
     c.I('landing').innerHTML = 'HTML ('+( more ? more : 'Page2')+')'+c.data
-    pageSwap(button ? button : 'page2')
+    c.pageSwap(button ? button : 'page2')
   })
 
   c.addEvent('click', 'data', ()=>{
