Reviewed multi component data issue and refactored

--- a/components/landing.html
+++ b/components/landing.html
@@ -65,16 +65,17 @@
   }
 
   // CHECK for relevency. they were needed b4 we put in pages, but now irrelevent...
-  c.addEvent('click', 'page2', ()=>{
-    data.landingPageTitle = 'Page 2 to Come'
-  }, true)
-
-  c.addEvent('click', 'data', ()=>{
-    data.landingPageTitle = 'Data Page to Come'
-  }, true)
+  // ...
+  // c.addEvent('click', 'page2', ()=>{
+  //   data.landingPageTitle = 'Page 2 to Come'
+  // }, true)
+  //
+  // c.addEvent('click', 'data', ()=>{
+  //   data.landingPageTitle = 'Data Page to Come'
+  // }, true)
 
   c.addEvent('click', 'login', ()=>{
-    data.landingPageTitle = 'Login Page'
+    // data.landingPageTitle = 'Login Page'
     data.user = 'lippy66'
     data.id = '3ofjaksdf'
   }, true)
