added footer component and styling

--- a/components/id-card.html
+++ b/components/id-card.html
@@ -50,7 +50,7 @@
   </div>
 </content>
 </template>
-
+<!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
 (( c = new Component([ 'id-card-tag', '#id-card' ]) )=>{
@@ -67,3 +67,4 @@
 })()
 
 </script>
+<!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
