--- a/main.css
+++ b/main.css
@@ -1,13 +1,39 @@
-body {
+html, body {
   font-family: sans;
   background-image: url("gfx/tx2.png");
-  margin-top: 0px;
   text-align: center;
   font-size: 20px;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  min-height: 100%;
+  position: relative;
+}
+.linen-background {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  background-image: url("gfx/linen.png");
+  color: rgba(255,255,255,0.8);
+  padding-top: 5%;
+  font-size: 25px;
 }
 .gray1 {
   color: rgba(20,20,0,0.8);
 }
-.whatever {
-  background-color: green;
+#all {
+   min-height: 100%;
+   position: relative;
+}
+#content {
+   padding-bottom: 60px;
+}
+#footer {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  background-color: rgba(0,0,0,0.05);
+  padding-top: 4px;
+  font-size: 14px;
 }
