made footer bottom setting controlled by local JS function

--- a/components/id-card.html
+++ b/components/id-card.html
@@ -3,6 +3,7 @@
 <!-- { { { { { { { { { { { { { { { {  CSS  } } } } } } } } } } } } } } } } } -->
 <style>
   .card {
+    font-size: 20px;
     display: inline-block;
     background-color: rgba(0,0,0,0.25);
     width: 25%;
