--- a/components/footer.html
+++ b/components/footer.html
@@ -1,15 +1,42 @@
 <template id="footer">
 <!-- { { { { { { { { { { { { { { { {  CSS  } } } } } } } } } } } } } } } } } -->
 <style>
-
+content {
+  display: block;
+  width: 100%;
+  height: 20px;
+  background-color: rgba(0,0,0,0.05);
+  padding-top: 5px;
+  font-size: 14px;
+  margin-top: 0;
+}
 </style>
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
-<content>
+<content id='copy'>
   &copy; Bob Main
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
-(( c = new Component([ 'footer-tag', '#footer' ]) )=>{ c.newElm() })()
+
+(( c = new Component([ 'footer-tag', '#footer' ]) )=>{
+
+  resetFooter = ()=>{
+    let footer = c.I('copy')
+    footer.setAttribute('style', 'margin-top: 0px;')
+    const diff = window.innerHeight - footer.offsetTop
+    if (diff > 25 && footer.offsetTop !== 0) {
+      console.log('pass!!!')
+      footer.setAttribute('style', 'margin-top: '+(diff-25)+'px;')
+    }
+  }
+
+  c.onAttributeSetOrChange = ()=>{ resetFooter() }
+  window.onload = function(){ resetFooter() }
+  window.onresize = function(){ resetFooter() }
+
+  c.newElm()
+})()
+
 </script>
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
