--- a/components/navbar.html
+++ b/components/navbar.html
@@ -66,10 +66,10 @@ component.getElementById('endText').innerHTML =
   '<em> * Static script edited </em>';
 // really, should never do it like this. you CAN, but will f-up if you add multiple components. best never do it like this...
 
-
 ((c = new Component([ 'navbar-tag', '#navbar' ]))=>{
 
   c.onAttributeSetOrChange = (attr)=>{
+    console.log(c.data)
     c.root.clicked = c.root.clicked || 'landing'
     if (attr === 'directory') {
       const dir = c.directory ? c.directory.split('/') : []
@@ -90,12 +90,10 @@ component.getElementById('endText').innerHTML =
 
   c.addEvent('click', 'landing', ()=>{
     c.I('landing').innerHTML = 'HTML components Demo'
-    // c.pageSwap('landing', true)
   })
 
   c.addEvent('click', 'page2', infoClick = (button, more)=>{
     c.I('landing').innerHTML = 'HTML ('+( more ? more : 'Page2')+')'+c.data
-    // c.pageSwap(button ? button : 'page2')
   })
 
   c.addEvent('click', 'data', ()=>{
