condensed unnecessary var declaration on component instance

--- a/components/footer.html
+++ b/components/footer.html
@@ -19,8 +19,8 @@ content {
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
-(( c = new Component([ 'footer-tag', '#footer' ]) )=>{
-  
+(( c = new Component('footer-tag') )=>{
+
   c.resetFooter = ()=>{
     let footer = c.I('copy')
     footer.setAttribute('style', 'margin-top: 0px;')
