--- a/components/id-card.html
+++ b/components/id-card.html
@@ -54,7 +54,7 @@
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
-(( c = new Component([ 'id-card-tag', '#id-card' ]) )=>{
+(( c = new Component('id-card-tag') )=>{
 
   c.onAttributeSetOrChange = ()=>{
     c.I('title').innerHTML = c.data.title
