--- a/components/landing.html
+++ b/components/landing.html
@@ -54,7 +54,7 @@
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
-(( c = new Component([ 'landing-tag', '#landing' ]) )=>{
+(( c = new Component('landing-tag') )=>{
 
   c.onAttributeSetOrChange = (attr)=>{
     c.root.getElementById('title').innerHTML = c.data.landingPageTitle
