Added Login Component

--- a/components/id-card.html
+++ b/components/id-card.html
@@ -57,6 +57,7 @@
 (( c = new Component('id-card-tag') )=>{
 
   c.onAttributeSetOrChange = ()=>{
+    console.log(c.data.name)
     c.I('title').innerHTML = c.data.title
     c.I('first').value = c.data.name
     c.I('last').value = c.data.last
