fixed failed update for serve-only changes

--- a/components/id-card.html
+++ b/components/id-card.html
@@ -56,8 +56,7 @@
 
 (( c = new Component('id-card-tag') )=>{
 
-  c.onAttributeSetOrChange = ()=>{
-    console.log(c.data.name)
+  c.onAttributeSetOrChange = (attr)=>{
     c.I('title').innerHTML = c.data.title
     c.I('first').value = c.data.name
     c.I('last').value = c.data.last
