made landing page cards non-editable and incorporated html.js

--- a/components/htmlJS.html
+++ b/components/htmlJS.html
@@ -44,7 +44,7 @@ tr:nth-child(even) {
   <div style='text-align: center'>
     <strong>Cronenberg</strong> Examples from Html.js <em>tester</em> file
     <div id="oldData" var="x oldData">
-      However, We still have our dynamically served data embeded: [ x.arr ]
+      However, We still have our dynamically served data embeded: [ x ]
     </div>
   </div>
   <div> <br>
@@ -181,6 +181,7 @@ tr:nth-child(even) {
     <div class="inline" var="h str">
       <strong> tester.html </strong>
       <h3> h </h3>
+      <h5> h again </h5>
     </div>
 
     <div class="inline"> <strong> tester.html </strong>
