--- a/components/id-card.html
+++ b/components/id-card.html
@@ -6,7 +6,7 @@
     font-size: 20px;
     display: inline-block;
     background-color: rgba(0,0,0,0.25);
-    width: 25%;
+    width: 200px;
     margin: 10px;
     border-radius: 2px;
   }
@@ -14,59 +14,56 @@
     width: 100%;
     border-radius: 2px;
     background-color: rgba(101, 156, 255, 0.5);
+    margin-bottom: 5px;
+    padding: 3px 0px 3px;
   }
   .float-left {
     float: left;
     padding-left: 5px;
+    color: rgba(0,0,0,0.6);
+  }
+  .entry {
+    border-bottom: solid rgba(101, 156, 255, 0.5) 2px;
+    background: rgba(255,255,255,0.2);
+    border-radius: 2px;
+    width: 100px;
   }
   th {
     font-size: 16px;
   }
-  input {
-    width: 90%;
+  table {
+    margin-bottom: 5px;
   }
 </style>
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
   <div class="card">
     <table style="width:100%">
-      <tr><div id="title"> --- Static </div>
-        <th class='float-left'> First Name </th>
-        <th><input id="first" placeholder="Not Set..."/></th>
+      <tr>
+        <div id='title' var='t title'/> t </div>
+        <th class='float-left'> First Name: </th>
+        <th><div class='entry' var='n name'/> n </div></th>
       </tr>
       <tr>
-        <th class='float-left'> Last Name </th>
-        <th><input id="last" placeholder="Not Set..."/></th>
+        <th class='float-left'> Last Name: </th>
+        <th><div class='entry' var='{l} last'/> {l} </div></th>
       </tr>
       <tr>
-        <th class='float-left'> Age </th>
-        <th><input id="age" placeholder="Not Set..."/></th>
+        <th class='float-left'> Age: </th>
+        <th><div class='entry' var='x age'/> x </div></th>
       </tr>
       <tr>
-        <th class='float-left'> Height </th>
-        <th><input id="height" placeholder="Not Set..."/></th>
+        <th class='float-left'> Height: </th>
+        <th><div class='entry' var='x height'/> x </div></th>
       </tr>
     </table>
-    <button id="button" class="whatever"> + </button>
   </div>
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
-(( c = new Component('id-card-tag') )=>{
-
-  c.onAttributeSetOrChange = (attr)=>{
-    c.I('title').innerHTML = c.data.title
-    // ^^^ start with using var for this... ^^^^
-    c.I('first').value = c.data.name
-    c.I('last').value = c.data.last
-    c.I('age').value = c.data.age
-    c.I('height').value = c.data.height
-  }
-
-  c.newElm()
-})()
+(( c = new Component('id-card-tag') )=>{ c.newElm() })()
 
 </script>
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
