added data component and fixed a bug

--- a/components/landing.html
+++ b/components/landing.html
@@ -46,9 +46,13 @@
     <span> Id# </span>
     <input id="idNum" placeholder="Not Set...">
   </div>
-  <id-card-tag serve="data.important1"></id-card-tag>
-  <id-card-tag serve="data.important2"></id-card-tag>
-  <id-card-tag serve="data.important3"></id-card-tag>
+  <!-- <div for='x idCards'>
+    <div> x.name </div>
+    <id-card-tag serve="x"></id-card-tag>
+  </div> -->
+  <id-card-tag serve="data.idCards[0]"></id-card-tag>
+  <id-card-tag serve="data.idCards[1]"></id-card-tag>
+  <id-card-tag serve="data.idCards[2]"></id-card-tag>
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
