--- a/components/landing.html
+++ b/components/landing.html
@@ -46,13 +46,14 @@
     <span> Id# </span>
     <input id="idNum" placeholder="Not Set...">
   </div>
-  <!-- <div for='x idCards'>
-    <div> x.name </div>
-    <id-card-tag serve="x"></id-card-tag>
-  </div> -->
+  <div for='card idCards'>
+    <id-card-tag serve="card"></id-card-tag>
+  </div>
   <id-card-tag serve="data.idCards[0]"></id-card-tag>
   <id-card-tag serve="data.idCards[1]"></id-card-tag>
   <id-card-tag serve="data.idCards[2]"></id-card-tag>
+  <id-card-tag serve="data.idCards[1]"></id-card-tag>
+
 </content>
 </template>
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
