ok looks like i may have dynamic and updated components functioning.
- looks like there really could be some issues and need to test
EXSTENSIVE!!!!

--- a/components/landing.html
+++ b/components/landing.html
@@ -31,6 +31,8 @@
 </style>
 <!-- < < < < < < < < < < < < < < < <  html > > > > > > > > > > > > > > > > > -->
 <content>
+  <!-- <id-card-tag serve="data.idCards[1]"></id-card-tag> -->
+
   <div class="landing-container">
     <div id='title'> --- Static Title </Div>
     <div>
