--- a/components/navbar.html
+++ b/components/navbar.html
@@ -106,7 +106,7 @@ component.getElementById('endText').innerHTML =
   })
 
   c.addEvent('click', 'login', ()=>{
-    data.idCards[1].name = "Nav Login("+c.data+") Clicked"
+    data.idCards[1].name = "("+c.data+")"
     data.user = 'LodgeSkins'
     data.id = 'fdg856csd3'
   }, true)
