--- a/components/landing.html
+++ b/components/landing.html
@@ -51,10 +51,10 @@
   <div for='card idCards'>
     <id-card-tag serve="card"></id-card-tag>
   </div>
-  <id-card-tag serve="data.idCards[0]"></id-card-tag>
+  <!-- <id-card-tag serve="data.idCards[0]"></id-card-tag>
   <id-card-tag serve="data.idCards[1]"></id-card-tag>
   <id-card-tag serve="data.idCards[2]"></id-card-tag>
-  <id-card-tag serve="data.idCards[1]"></id-card-tag>
+  <id-card-tag serve="data.idCards[1]"></id-card-tag> -->
 
 </content>
 </template>
