--- a/components/navbar.html
+++ b/components/navbar.html
@@ -63,7 +63,7 @@ hr {
 
 let component = document.currentScript.ownerDocument.querySelector('#navbar').content
 component.getElementById('endText').innerHTML =
-  '<em> * Static script edited </em>';
+  '<em> &nbsp; * Static script edited </em>';
 // really, should never do it like this. you CAN, but will f-up if you add multiple components. best never do it like this...
 
 ((c = new Component('navbar-tag'))=>{
