--- a/components/id-card.html
+++ b/components/id-card.html
@@ -6,7 +6,7 @@
   font-size: 20px;
   display: inline-block;
   background-color: rgba(0,0,0,0.25);
-  width: 200px;
+  width: 220px;
   margin: 10px;
   border-radius: 2px;
 }
@@ -26,7 +26,7 @@
   border-bottom: solid rgba(101, 156, 255, 0.5) 2px;
   background: rgba(255,255,255,0.2);
   border-radius: 2px;
-  width: 100px;
+  width: 120px;
 }
 th {
   font-size: 16px;
@@ -42,19 +42,23 @@ table {
       <tr>
         <div id='title' var='t title'/> t </div>
         <th class='float-left'> First Name: </th>
-        <th><div class='entry' var='n name'/> n </div></th>
+        <th><div if='name' class='entry' var='n name'/> n </div></th>
       </tr>
       <tr>
         <th class='float-left'> Last Name: </th>
-        <th><div class='entry' var='{l} last'/> {l} </div></th>
+        <th><div if='last' class='entry' var='{l} last'/> {l} </div></th>
       </tr>
       <tr>
         <th class='float-left'> Age: </th>
-        <th><div class='entry' var='x age'/> x </div></th>
+        <th><div if='age' class='entry' var='x age'/> x </div></th>
       </tr>
       <tr>
         <th class='float-left'> Height: </th>
-        <th><div class='entry' var='x height'/> x </div></th>
+        <th><div if='feet' class='entry' var='f feet, i inches'/> f- ' i- "</div></th>
+      </tr>
+      <tr>
+        <th class='float-left'> Home: </th>
+        <th><div class='entry' var='h home'/> h </div></th>
       </tr>
     </table>
   </div>
@@ -63,13 +67,7 @@ table {
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
-(( c = new Component('id-card-tag') )=>{
-  // c.onAttributeSetOrChange = () => {
-  //   c.I('name').focus()
-  // }
-
-  c.newElm()
-})()
+(( c = new Component('id-card-tag') )=>{ c.newElm() })()
 
 </script>
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
