--- a/components/id-card.html
+++ b/components/id-card.html
@@ -58,7 +58,7 @@ table {
       </tr>
       <tr>
         <th class='float-left'> Home: </th>
-        <th><div class='entry' var='h home'/> h </div></th>
+        <th><div if='home' class='entry' var='h home'/> h </div></th>
       </tr>
     </table>
   </div>
