--- a/components/login.html
+++ b/components/login.html
@@ -19,9 +19,7 @@ content {
 <!-- () () () () () () () () () ()  JavaScript () () () () () () () () () () -->
 <script>
 
-(( c = new Component('login-tag') )=>{
-  c.newElm()
-})()
+(( c = new Component('login-tag') )=>{ c.newElm() })()
 
 </script>
 <!--  / / / / / / / / / / / / / / /   Notes    / / / / / / / / / / / / / / / -->
