--- a/components/navbar.html
+++ b/components/navbar.html
@@ -106,13 +106,12 @@ component.getElementById('endText').innerHTML =
   })
 
   c.addEvent('click', 'login', ()=>{
-    data.idCards[1].name = "("+c.data+")"
+    data.nest.idCards[1].name = "("+c.data+")"
     data.user = 'LodgeSkins'
     data.id = 'fdg856csd3'
   }, true)
 
   c.newElm()
-
 })()
 
 </script>
